# Automata

./: .clang-format  .gitignore  CFG.cpp  CFG.h  CMakeLists.txt  DFA.cpp  DFA.h  DFA.json  DFA_test.cpp  ENFA.cpp  ENFA.h  ENFA.json  MSSC_test.cpp  NFA.cpp  NFA.h  NFA.json  NFA_test.cpp  Node.cpp  Node.h  Product1.json  Product2.json  Product_test.cpp  RE.cpp  RE.h  README.md  REGEX_test.cpp  SSC_test.cpp  Variable.cpp  Variable.h  main.cpp  reader.cpp  transition.cpp  transition.h  transitionNFA.cpp  transitionNFA.h
Input_files/: CFG.json  DFA.json  Product2.json  TFA.json  input-cnf1.json  input-cnf2.json  input-cyk1.json  input-cyk2.json  input-dfa2re.json  input-ll1.json  input-ll1_2.json  input-ll1_3.json  input-pda2cfg1.json  input-pda2cfg2.json  retest2.txt
Output_files/Expected_output/: CFG_output.txt  CNF_output.txt  CYK_output.txt  LL1_output.txt  PDA_output.txt
Test_files/: CFG_General_test.cpp  CFG_Parse_Test.cpp  CFG_test.cpp  CNF_test.cpp  CYK_test.cpp  DFA_test.cpp  LL1_test.cpp  MACRO_test.cpp  MSSC_test.cpp  NFA_test.cpp  PDA_test.cpp  Product_test.cpp  REGEX_test.cpp  SSC_test.cpp  StateElimination_test.cpp  TFA_test.cpp
main_sources/: ENFA.h  RE.cpp
src/: reader.cpp
src/Context Free/: CFG.cpp  CFG.h  PDA.cpp  PDA.h  State.cpp  Transition.cpp  Transition.h  Variable.cpp  Variable.h
src/Context_Free/: CFG.h  State.h  json.hpp
src/Finite Automata/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  Node.cpp  Node.h  RE.cpp  RE.h  Variable.cpp  Variable.h  transition.cpp  transition.h  transitionNFA.cpp  transitionNFA.h
src/Finite_Automata/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  RE.cpp  transition.cpp  transition.h  transitionNFA.cpp  transitionNFA.h
